[project]
name = "book-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "google-generativeai>=0.8.4",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.6",
    "langchain-chroma",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.0.10",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "gradio>=5.23.1",
    "ipywidgets>=8.1.5",
    "plotly>=6.0.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "transformers>=4.50.2",
    "huggingface-hub>=0.29.3",
    "tf-keras>=2.18.0",
    "numba>=0.61.0",
    "tensorflow[and-cuda]>=2.18.1",
]
